testing references path

--- a/package.json
+++ b/package.json
@@ -50,6 +50,7 @@
     "jvent": "^0.2.0",
     "moment": "^2.13.0",
     "multer": "^1.1.0",
+    "nightmare-real-mouse": "^1.0.0",
     "node-uuid": "^1.4.7",
     "nodemailer": "^2.4.2",
     "nodemailer-smtp-transport": "^2.5.0",
